--- a/package.json
+++ b/package.json
@@ -40,19 +40,17 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
-    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/terminus": "^10.2.3",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.2.0",
-    "@scalar/nestjs-api-reference": "^0.3.173",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
-    "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
+    "helmet": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.16",
@@ -60,7 +58,6 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
     "stripe": "^17.5.0",
@@ -87,7 +84,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
-    "nestia": "^6.3.1",
     "prettier": "^3.0.0",
     "prisma": "^6.2.0",
     "source-map-support": "^0.5.21",
@@ -114,6 +110,12 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@config/(.*)$": "<rootDir>/config/$1",
+      "^@common/(.*)$": "<rootDir>/common/$1",
+      "^@provider/(.*)$": "<rootDir>/provider/$1",
+      "^@modules/(.*)$": "<rootDir>/modules/$1"
+    }
   }
 }
